--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,11 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0-alpha6'
+        classpath 'com.android.tools.build:gradle:1.3.0'
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.+'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'org.apache.commons:commons-lang3:3.4'
-        classpath 'com.bugsnag:bugsnag-android-gradle-plugin:+'
         classpath('com.stanfy.spoon:spoon-gradle-plugin:1.0.3') {
             exclude module: 'guava'
         }
@@ -21,6 +20,8 @@ buildscript {
         classpath 'com.google.gms:google-services:2.0.0-alpha6'
         classpath 'me.tatarka:gradle-retrolambda:3.2.4'
         classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
     }
 }
 
@@ -28,6 +29,10 @@ allprojects {
     repositories {
         jcenter()
     }
+}
+
+subprojects {
+    tasks.withType(Javadoc).all { enabled = false }
 }
 
 task clean(type: Delete) {
